[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/SpritesFinais/Objetos/Des.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Costura/ArrastarPalavra.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.0754, 19.9235 )

[node name="Morfema" type="TextureButton"]
margin_right = 59.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
isMorfema = true
isPrefixo = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 29.3997, 13.809 )
shape = SubResource( 1 )

[connection signal="button_down" from="." to="." method="_on_Morfema_button_down"]
[connection signal="button_up" from="." to="." method="_on_Morfema_button_up"]
[connection signal="pressed" from="." to="." method="_on_Morfema_pressed"]
